{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 344,
  "lineage": "94c82ed3-fe4e-ac9e-2ae8-3ff1165be7af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:loadbalancer/app/aniket-alb-ecs/5a31daab8eebbd83",
            "arn_suffix": "app/aniket-alb-ecs/5a31daab8eebbd83",
            "dns_name": "aniket-alb-ecs-597929250.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:loadbalancer/app/aniket-alb-ecs/5a31daab8eebbd83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aniket-alb-ecs",
            "security_groups": [
              "sg-0979687966e579fee",
              "sg-0c80ce4a0f043ea1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5cd90c62"
              },
              {
                "subnet_id": "subnet-90e062cc"
              }
            ],
            "subnets": [
              "subnet-5cd90c62",
              "subnet-90e062cc"
            ],
            "vpc_id": "vpc-f45d8f8e",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end_booking",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:listener/app/aniket-alb-ecs/5a31daab8eebbd83/18e053489a1c40e2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/booking-ecs-tg/f9cd2e6f98e99707",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:listener/app/aniket-alb-ecs/5a31daab8eebbd83/18e053489a1c40e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:loadbalancer/app/aniket-alb-ecs/5a31daab8eebbd83",
            "port": 3001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.booking_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end_movie",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:listener/app/aniket-alb-ecs/5a31daab8eebbd83/c7a598dbab29280a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/movie-ecs-tg/4cbddd6b1e083555",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:listener/app/aniket-alb-ecs/5a31daab8eebbd83/c7a598dbab29280a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:loadbalancer/app/aniket-alb-ecs/5a31daab8eebbd83",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.movie_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end_showtime",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:listener/app/aniket-alb-ecs/5a31daab8eebbd83/6e4f7ed9860157ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/showtime-ecs-tg/53ae0d5a5b37e654",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:listener/app/aniket-alb-ecs/5a31daab8eebbd83/6e4f7ed9860157ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:loadbalancer/app/aniket-alb-ecs/5a31daab8eebbd83",
            "port": 3002,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.showtime_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "booking_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/booking-ecs-tg/f9cd2e6f98e99707",
            "arn_suffix": "targetgroup/booking-ecs-tg/f9cd2e6f98e99707",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/booking",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/booking-ecs-tg/f9cd2e6f98e99707",
            "lambda_multi_value_headers_enabled": false,
            "name": "booking-ecs-tg",
            "port": 3001,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f45d8f8e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "movie_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/movie-ecs-tg/4cbddd6b1e083555",
            "arn_suffix": "targetgroup/movie-ecs-tg/4cbddd6b1e083555",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/movies",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/movie-ecs-tg/4cbddd6b1e083555",
            "lambda_multi_value_headers_enabled": false,
            "name": "movie-ecs-tg",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f45d8f8e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "showtime_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/showtime-ecs-tg/53ae0d5a5b37e654",
            "arn_suffix": "targetgroup/showtime-ecs-tg/53ae0d5a5b37e654",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/cinemas",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:269898812198:targetgroup/showtime-ecs-tg/53ae0d5a5b37e654",
            "lambda_multi_value_headers_enabled": false,
            "name": "showtime-ecs-tg",
            "port": 3002,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-f45d8f8e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aniket_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269898812198:security-group/sg-00feff99ad4f4eafe",
            "description": "controls access to the application ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00feff99ad4f4eafe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aniket-ecs-lbsg",
            "name_prefix": null,
            "owner_id": "269898812198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-f45d8f8e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aniket_application_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269898812198:security-group/sg-072373c23f58ad4b9",
            "description": "controls direct access to application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072373c23f58ad4b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00feff99ad4f4eafe"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "aniket-ecs-appsg",
            "name_prefix": null,
            "owner_id": "269898812198",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-f45d8f8e"
          },
          "depends_on": [
            "aws_security_group.aniket_alb_sg"
          ]
        }
      ]
    }
  ]
}